--- a/client/index.html
+++ b/client/index.html
@@ -11,3 +11,10 @@
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
+<style>
+  html, body {
+    margin: 0;
+    background-color: white;
+    font-family: sans-serif;
+  }
+</style>
